apps/argocd/overlays/prod/ingress-route-ext.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: argocd-ingress-ext
  namespace: argocd
spec:
  entryPoints:
    - websecure-ext
  routes:
    - match: Host(`argocd.sobrinho.pt`)
      kind: Rule
      priority: 10
      middlewares:
        - name: middleware-auth-forward
          namespace: traefik
      services:
        - name: argocd-server
          port: http
    - match: Host(`argocd.sobrinho.pt`) && Header(`Content-Type`, `application/grpc`)
      kind: Rule
      priority: 11
      middlewares:
        - name: middleware-auth-forward
          namespace: traefik
      services:
        - name: argocd-server
          port: http
          scheme: h2c
